test/frontend/fail/shadow_symbol.osl
shader foo() {
    int x;
    {
        int x;
    }
}
